fix(button): fix shape of delete buttons on Safari for the 3rd time (and last hopefully)

--- a/src/scss/components/_user-story.scss
+++ b/src/scss/components/_user-story.scss
@@ -7,8 +7,8 @@
 
 	button.button-delete {
 		position: absolute;
-		top: rem(-10px);
-		right: rem(-10px);
+		top: rem(-12px);
+		right: rem(-12px);
 		width: rem(24px);
 		height: rem(24px);
 		background-color: var(--ui-color-bg-action);
@@ -21,9 +21,9 @@
 		&::after {
 			@include pseudo($content: url("/src/images/design/cross.svg"));
 			top: rem(2px);
-			left: 0;
-			width: 100%;
-			height: 100%;
+			left: rem(2px);
+			width: rem(20px);
+			height: rem(20px);
 			border-radius: 50%;
 		}
 
